project(TKBinXCAF)

if (WIN32)
  list( APPEND TKBinXCAF_PRECOMPILED_DEFS "-D__BinXCAFDrivers_DLL" )
  list( APPEND TKBinXCAF_PRECOMPILED_DEFS "-D__BinMXCAFDoc_DLL" )
  string( REGEX REPLACE ";" " " TKBinXCAF_PRECOMPILED_DEFS "${TKBinXCAF_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinXCAFDrivers")
      list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinXCAFDrivers" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinXCAFDrivers")
      list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinXCAFDrivers" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMXCAFDoc")
      list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMXCAFDoc" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMXCAFDoc")
      list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMXCAFDoc" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinXCAFDrivers")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinXCAFDrivers" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinXCAFDrivers")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinXCAFDrivers" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMXCAFDoc")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMXCAFDoc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMXCAFDoc")
    list( APPEND TKBinXCAF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMXCAFDoc" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKBinXCAF_USED_LIBS TKBRep )
  list( APPEND TKBinXCAF_USED_LIBS TKXCAF )
  list( APPEND TKBinXCAF_USED_LIBS TKMath )
  list( APPEND TKBinXCAF_USED_LIBS TKernel )
  list( APPEND TKBinXCAF_USED_LIBS TKBinL )
  list( APPEND TKBinXCAF_USED_LIBS TKG2d )
  list( APPEND TKBinXCAF_USED_LIBS TKCAF )
  list( APPEND TKBinXCAF_USED_LIBS TKCDF )
  list( APPEND TKBinXCAF_USED_LIBS TKG3d )
  list( APPEND TKBinXCAF_USED_LIBS TKLCAF )
  list( APPEND TKBinXCAF_USED_LIBS TKBin )

if (WIN32)
elseif(APPLE)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx" )
    SOURCE_GROUP (BinXCAFDrivers FILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx" )
      SOURCE_GROUP (BinXCAFDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx" )
    SOURCE_GROUP (BinXCAFDrivers FILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx" )
      SOURCE_GROUP (BinXCAFDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentRetrievalDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx" )
    SOURCE_GROUP (BinXCAFDrivers FILES "${BUILD_PATCH_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx" )
      SOURCE_GROUP (BinXCAFDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinXCAFDrivers/BinXCAFDrivers_DocumentStorageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_AreaDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_CentroidDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ColorToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DatumDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DimTolToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_DocumentToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_GraphNodeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LayerToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_LocationDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_MaterialToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_ShapeToolDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx")
    list( APPEND TKBinXCAF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx" )
    SOURCE_GROUP (BinMXCAFDoc FILES "${BUILD_PATCH_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx")
      list( APPEND TKBinXCAF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx" )
      SOURCE_GROUP (BinMXCAFDoc FILES "${CMAKE_SOURCE_DIR}//src/BinMXCAFDoc/BinMXCAFDoc_VolumeDriver.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKBinXCAF)
 add_library( TKBinXCAF SHARED ${TKBinXCAF_USED_SRCFILES} )

 set_property(TARGET TKBinXCAF PROPERTY FOLDER DataExchange)

 install( TARGETS TKBinXCAF
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bin/Debug/TKBinXCAF.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}")
 endif()


 set_target_properties( TKBinXCAF PROPERTIES COMPILE_FLAGS "${TKBinXCAF_PRECOMPILED_DEFS}" )
 include_directories( ${TKBinXCAF_COMPILER_DIRECTORIES} )
 target_link_libraries( TKBinXCAF ${TKBinXCAF_USED_LIBS} )
endif()
